# discovery-artifact-manager

./: .gitignore  .travis.yml  README.md  WORKSPACE  gen_mocks.py  gen_ovr.py  generate_mock_server.py  go.mod  go.sum  package-lock.json  package.json  requirements.txt  run_tests.py  run_tests2.py  update-discovery.js
.github/: CODEOWNERS  auto-approve.yml  sync-repo-settings.yaml
.github/workflows/: autoapprove.yml  ci.yml  list-services.yml  normalize-disco.yml  update-disco.yml  update-discovery.yml
.toys/: update-disco.rb
clients/nodejs/google-api-nodejs-client/: .gitrepo  package.json
clients/php/google-api-php-client-services/: .gitrepo
clients/ruby/google-api-ruby-client/: .gitrepo  Gemfile
cmd/common/: common.go  common_test.go  updatedisco.go
cmd/nodejs/: nodejs.go
cmd/ruby/: ruby.go
cmd/update/: update.go
cmd/updatedisco/: main.go
discoveries/: BUILD.bazel  abusiveexperiencereport.v1.json  acceleratedmobilepageurl.v1.json  accessapproval.v1.json  accesscontextmanager.v1.json  accesscontextmanager.v1beta.json  acmedns.v1.json  addressvalidation.v1.json  adexchangebuyer.internal.json  adexchangebuyer.v1.2.json  adexchangebuyer.v1.3.json  adexchangebuyer.v1.4.json  adexchangebuyer2.v2beta1.json  adexchangeseller.v1.1.json  adexchangeseller.v1.json  adexchangeseller.v2.0.json  adexperiencereport.v1.json  admin.datatransfer_v1.json  admin.directory_v1.json  admin.reports_v1.json  adminsdkreseller.v1.json  admob.v1.json  admob.v1beta.json  adsense.v1.4.json  adsense.v2.json  adsensehost.v4.1.json  adsenseplatform.v1alpha.json  advisorynotifications.v1.json  agentidentity.v1.json  agentidentity.v1alpha.json  agentidentity.v1beta.json  agentregistry.v1alpha.json  aiplatform.v1.json  aiplatform.v1beta1.json  airquality.v1.json  alertcenter.v1beta1.json  alloydb.v1.json  alloydb.v1alpha.json  alloydb.v1beta.json  analytics.v2.4.json  (+557 more)
gapic/: BUILD.bazel
gapic/google/compute/: artman_compute.yaml
gapic/google/compute/v1/: BUILD.bazel  compute_gapic.yaml
gapic/lang/: common.yaml
gapic/packaging/: api_defaults.yaml  dependencies.yaml
google-api-client-generator/: setup.py
google-api-client-generator/src/googleapis/codegen/: api.py  cpp_generator.py
mockgen/: gen_mocks.py  gen_ovr.py  generate_mock_discovery_document.py  generate_mock_server.py  generate_mock_value_override.py  setup.py
mockgen/discoveryutil/: __init__.py
mockgen/mockgen/: generate_mock_discovery_document.py  generate_mock_server.py  generate_mock_value_override.py
mockgen/mockgen/discoveryutil/: __init__.py
pkg/common/environment/: environment.go
pkg/common/errorlist/: errorlist.go
pkg/common/gcs/: gcs.go
pkg/common/parsehtml/: parsehtml.go
pkg/snippetgen/common/clientlib/: clientlib.go
pkg/snippetgen/common/fragment/: clone.go  file.go  file_test.go  fragment.go  merge.go  merge_test.go  validation.go  validation_test.go
pkg/snippetgen/compilecheck/: compilecheck.go  compilecheck.sh  doc.go
pkg/snippetgen/jsonpkger/: fmt.go  fmt_test.go  main.go  main_test.go
pkg/snippetgen/mergesnippets/: main.go  main_test.go
pkg/snippetgen/mergesnippets/snippet/: snippet.go  snippet_test.go
scripts/: normalize_discovery.py  open_pr.py  update_disco.py
server/: .dockerignore  Dockerfile  app.yaml  cron.yaml  main.py  requirements.txt
server/scripts/: git-cookie-authdaemon
server/tasks/: _check_output.py  _commit_message.py  _common.py  _git.py  accounts.py  discovery_artifact_manager.py  google_api_go_client.py  google_api_nodejs_client.py  google_api_php_client_services.py  google_api_ruby_client.py
server/tests/: common.py  test__check_output.py  test__commit_message.py  test__git.py  test_accounts.py  test_discovery_artifact_manager.py  test_google_api_go_client.py  test_google_api_nodejs_client.py  test_google_api_php_client_services.py  test_google_api_ruby_client.py
src/: README.md  setup  setup_test
src/common/environment/: environment.go  environment_test.go
src/common/gcs/: gcs_test.go
src/common/parsehtml/: parsehtml.go
src/main/common/: common.go  common_test.go  update.go  updatedisco.go  updatelib.go
src/main/nodejs/: nodejs.go
src/main/ruby/: ruby.go
src/main/update/: update.go
src/main/updatedisco/: main.go
src/proto/: clean-protobuf-javadoc.go
src/snippetgen/common/clientlib/: clientlib.go  clientlib_test.go
src/snippetgen/common/fragment/: clone.go  clone_test.go  file.go  file_test.go  fragment.go  merge.go  merge_test.go  validation.go  validation_test.go
src/snippetgen/common/metadata/: metadata.go  metadata_test.go
src/snippetgen/compilecheck/: README.md  compilecheck.go  compilecheck.sh
src/snippetgen/jsonpkger/: fmt.go  fmt_test.go  main.go  main_test.go
src/snippetgen/mergesnippets/: main  main.go  main_test.go
src/snippetgen/mergesnippets/snippet/: snippet.go  snippet_test.go
src/tools/: setup.sh~
src/tools/common/clone/: clone.go  clone.go~  clone_test.go  clone_test.go~
src/tools/common/gcs/: gcs.go  gcs.go~  gcs_test.go~
tests/: test_update_disco.py
toolkit/: .gitrepo  build.gradle
toolkit/gradle/wrapper/: gradle-wrapper.properties
(+322 files in other folders)
