load("@com_google_api_codegen//gapic/java:java_gapic_pkg.bzl", "java_gapic_assembly_gradle_pkg")

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

java_gapic_assembly_gradle_pkg(
    name = "discogapic-java-assembly",
    deps = [
        "//gapic/google/compute/v1:gapic-google-cloud-compute-v1-java",
    ],
)