load("@com_google_api_codegen//rules_gapic/java:java_gapic.bzl", "java_discogapic_library")
load("@com_google_api_codegen//rules_gapic/java:java_gapic_pkg.bzl", "java_gapic_assembly_gradle_pkg")

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

##############################################################################
# Java
##############################################################################
java_discogapic_library(
    name = "compute_java_gapic",
    src = "//discoveries:compute.v1.json",
    gapic_yaml = "compute_gapic.yaml",
)

[java_test(
    name = test_name,
    test_class = test_name,
    runtime_deps = [
        ":compute_java_gapic_test",
    ],
) for test_name in [
    "com.google.cloud.compute.v1.AcceleratorTypeClientTest",
    "com.google.cloud.compute.v1.AddressClientTest",
    "com.google.cloud.compute.v1.AutoscalerClientTest",
    "com.google.cloud.compute.v1.BackendBucketClientTest",
    "com.google.cloud.compute.v1.BackendServiceClientTest",
    "com.google.cloud.compute.v1.DiskClientTest",
    "com.google.cloud.compute.v1.DiskTypeClientTest",
    "com.google.cloud.compute.v1.FirewallClientTest",
    "com.google.cloud.compute.v1.ForwardingRuleClientTest",
    "com.google.cloud.compute.v1.GlobalAddressClientTest",
    "com.google.cloud.compute.v1.GlobalForwardingRuleClientTest",
    "com.google.cloud.compute.v1.GlobalOperationClientTest",
    "com.google.cloud.compute.v1.HealthCheckClientTest",
    "com.google.cloud.compute.v1.HttpHealthCheckClientTest",
    "com.google.cloud.compute.v1.HttpsHealthCheckClientTest",
    "com.google.cloud.compute.v1.ImageClientTest",
    "com.google.cloud.compute.v1.InstanceClientTest",
    "com.google.cloud.compute.v1.InstanceGroupClientTest",
    "com.google.cloud.compute.v1.InstanceGroupManagerClientTest",
    "com.google.cloud.compute.v1.InstanceTemplateClientTest",
    "com.google.cloud.compute.v1.InterconnectAttachmentClientTest",
    "com.google.cloud.compute.v1.InterconnectClientTest",
    "com.google.cloud.compute.v1.InterconnectLocationClientTest",
    "com.google.cloud.compute.v1.LicenseClientTest",
    "com.google.cloud.compute.v1.LicenseCodeClientTest",
    "com.google.cloud.compute.v1.MachineTypeClientTest",
    "com.google.cloud.compute.v1.NetworkClientTest",
    "com.google.cloud.compute.v1.NodeGroupClientTest",
    "com.google.cloud.compute.v1.NodeTemplateClientTest",
    "com.google.cloud.compute.v1.NodeTypeClientTest",
    "com.google.cloud.compute.v1.ProjectClientTest",
    "com.google.cloud.compute.v1.RegionAutoscalerClientTest",
    "com.google.cloud.compute.v1.RegionBackendServiceClientTest",
    "com.google.cloud.compute.v1.RegionClientTest",
    "com.google.cloud.compute.v1.RegionCommitmentClientTest",
    "com.google.cloud.compute.v1.RegionDiskClientTest",
    "com.google.cloud.compute.v1.RegionDiskTypeClientTest",
    "com.google.cloud.compute.v1.RegionInstanceGroupClientTest",
    "com.google.cloud.compute.v1.RegionInstanceGroupManagerClientTest",
    "com.google.cloud.compute.v1.RegionOperationClientTest",
    "com.google.cloud.compute.v1.RouteClientTest",
    "com.google.cloud.compute.v1.RouterClientTest",
    "com.google.cloud.compute.v1.SnapshotClientTest",
    "com.google.cloud.compute.v1.SslCertificateClientTest",
    "com.google.cloud.compute.v1.SslPolicyClientTest",
    "com.google.cloud.compute.v1.SubnetworkClientTest",
    "com.google.cloud.compute.v1.TargetHttpProxyClientTest",
    "com.google.cloud.compute.v1.TargetHttpsProxyClientTest",
    "com.google.cloud.compute.v1.TargetInstanceClientTest",
    "com.google.cloud.compute.v1.TargetPoolClientTest",
    "com.google.cloud.compute.v1.TargetSslProxyClientTest",
    "com.google.cloud.compute.v1.TargetTcpProxyClientTest",
    "com.google.cloud.compute.v1.TargetVpnGatewayClientTest",
    "com.google.cloud.compute.v1.UrlMapClientTest",
    "com.google.cloud.compute.v1.VpnTunnelClientTest",
    "com.google.cloud.compute.v1.ZoneClientTest",
    "com.google.cloud.compute.v1.ZoneOperationClientTest",
]]


##############################################################################
# Java Opensource Gradle Packages
##############################################################################
java_gapic_assembly_gradle_pkg(
    name = "google-cloud-compute-v1-java",
    client_group = 'com.google.cloud',
    version = '0.0.0-SNAPSHOT',
    client_deps = [":compute_java_gapic"],
    client_test_deps = [":compute_java_gapic_test"],
)
